cloudify/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cfy-manager
  name: cfy-manager
  #  namespace: permedcoe-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cfy-manager
  template:
    metadata:
      labels:
        app: cfy-manager
    spec:
      containers:
      - name: cfy-manager
        image: atosariapclab/croupier-grapevine:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /data
          name: tmp-storage
        ports:
        - containerPort: 80
          protocol: TCP
        securityContext:
          capabilities:
            add:
            - SYS_ADMIN
#        lifecycle:
#          postStart:
#            exec:
#              command: ["/bin/sh","-c","/scripts/poststart.sh"]
      volumes:
      - name: tmp-storage
        hostPath:
          path: /root/grapevine-cloudify/tmp/
          type: DirectoryOrCreate
