cloudify/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cfy-manager
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cfy-manager
  type: ClusterIP
