cloudify/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: content-type, Authorization, Tenant
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: cloudify-api
#  namespace: permedcoe-services
spec:
  rules:
  - host: cloudify.grapevine-project.eu
    http:
      paths:
      - backend:
          service:
            name: cfy-manager
            port: 
              number: 80
        path: /
        pathType: Prefix
#  tls:
#  - hosts:
#    - cloudify.grapevine-project.eu
#    secretName: cloudify.grapevine-project.eu
